--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ packages = [{include = "bizagi_rest"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+fastapi = "^0.88.0"
+sqlalchemy = "^1.4.45"
+pydantic = "^1.10.2"
 
 
 [build-system]
