--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,14 @@ pydantic = "^1.10.2"
 alembic = "^1.9.1"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.0"
+pytest-cov = "^4.0.0"
+pynvim = "^0.4.3"
+flake8 = "^6.0.0"
+black = "^22.12.0"
+mypy = "^0.991"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
