--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ fastapi = "^0.88.0"
 sqlalchemy = "^1.4.45"
 pydantic = "^1.10.2"
 alembic = "^1.9.1"
+uvicorn = "^0.20.0"
 
 
 [tool.poetry.group.dev.dependencies]
