--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ sqlalchemy = "^1.4.45"
 pydantic = "^1.10.2"
 alembic = "^1.9.1"
 uvicorn = "^0.20.0"
+python-dotenv = "^0.21.0"
 
 
 [tool.poetry.group.dev.dependencies]
