--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pynvim = "^0.4.3"
 flake8 = "^6.0.0"
 black = "^22.12.0"
 mypy = "^0.991"
+sqlalchemy2-stubs = "^0.0.2a31"
 
 [build-system]
 requires = ["poetry-core"]
