--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pydantic = "^1.10.2"
 alembic = "^1.9.1"
 uvicorn = "^0.20.0"
 python-dotenv = "^0.21.0"
+psycopg2-binary = "^2.9.5"
 
 
 [tool.poetry.group.dev.dependencies]
